<?xml version="1.0"?>
<package>
    <name>lidar_instance_segmentation_tvm</name>
    <version>0.1.0</version>
    <description>lidar_instance_segmentation_tvm</description>

    <maintainer email="yukky.saito@gmail.com">Yukihiro Saito</maintainer>
    <author email="kosuke.tnp@gmail.com">Kosuke Takeuchi</author>
    <author email="yukky.saito@gmail.com">Yukihiro Saito</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>autoware_perception_msgs</build_depend>
    <build_depend>dynamic_object_visualization</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>autoware_perception_msgs</run_depend>
    <run_depend>dynamic_object_visualization</run_depend>

    <export></export>
</package>
